--- a/app/views/exercises/_form.html
+++ b/app/views/exercises/_form.html
@@ -11,4 +11,4 @@
     </select>
 </label>
 <div class="clear"></div>
-  <button class="btn btn-danger">Submit Instruction</button>
+<button class="btn btn-danger">Submit</button>
