--- a/app/views/exercises/new.html.erb
+++ b/app/views/exercises/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Add New Exercise</h1>
 <hr>
-<form id="new-edit" action='/exercises' method="post">
+<form id="ne-exercises" action='/exercises' method="post">
   <%= render('form') %>
 </form>
 <div class="clear"></div>
